# dgsparse-sparsetir-eval

./: .gitignore  .gitmodules  CMakeLists.txt
example/ge-spmm/: CMakeLists.txt  spmm.cu.cc
example/sddmm/: CMakeLists.txt  sddmm.cu.cc
example/util/: l2flush.cuh  sp_util.hpp
